--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     <span class="sr-only">Next</span>
     </a>
     </div>
-    </div></div>
+    </div>
+</div>
 
 <div class="DivEncima">
 <a class="TituloPeqTit">Escuela de formación artística </a><br>
@@ -1052,7 +1053,71 @@
           <div class="col-lg-12 text-center">
           <a class="TituloPeq">Puntos de atención</a><br>
             <h3 class="section-subheading text-muted">Conoce nuestros puntos de atención.</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15490.86770933303!2d-76.6155215200654!3d2.4416156686443085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sco!4v1513833247858" width="1100" height="370" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+<div class="carruselFondo">
+    <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="6"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="7"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="8"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="9"></li>
+    <li data-target="#carouselExampleIndicators2" data-slide-to="10"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+    <div  class="conainer">
+
+    <div class="carousel-item active">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 1.jpg"  alt="First slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 2.jpg"  alt="Second slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 3.jpg"  alt="3slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 4.jpg"  alt="4slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 5.jpg"  alt="5slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 6.jpg"  alt="6slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 7.jpg"  alt="7slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 8.jpg"  alt="8slide">
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="img/PDA/PUNTO ATENCION 9.jpg"  alt="9slide">
+    </div>
+    </div>
+
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+    </a>
+    </div>
+    </div>
+</div>
+
+
+
           </div>
         </div>
        </div>
@@ -1108,31 +1173,31 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-          <a class="TituloPeq">Escríbenos</a><br>
+          <a class="TituloPeq2">Escríbenos</a><br>
             <h3 class="section-subheading text-muted">Escribenos a través de nuestro correo.</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" novalidate>
+            <form id="contactForm" name="sentMessage" method="post" action="enviar2.php" novalidate>
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Tu nombre *" required data-validation-required-message="Please enter your name.">
+                    <input name="nombre" class="form-control" id="name" type="text" placeholder="Tu nombre *" required data-validation-required-message="Please enter your name.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Tu Correo *" required data-validation-required-message="Please enter your email address.">
+                    <input name="email" class="form-control" id="email" type="email" placeholder="Tu Correo *" required data-validation-required-message="Please enter your email address.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Tu teléfono *" required data-validation-required-message="Please enter your phone number.">
+                    <input name="telefono" class="form-control" id="phone" type="tel" placeholder="Tu teléfono *" required data-validation-required-message="Please enter your phone number.">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Tu mensaje *" required data-validation-required-message="Please enter a message."></textarea>
+                    <textarea name="mensaje" class="form-control" id="message" placeholder="Tu mensaje *" required data-validation-required-message="Please enter a message."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
@@ -1153,23 +1218,18 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2017</span>
+            <span class="copyright">Universidad del Cauca</span>
           </div>
           <div class="col-md-4">
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-twitter"></i>
+            <ul>
+               <li class="list-inline-item">
+                <a href="http://popayan.gov.co/secdeporteycultura/la-secretaria/escuelas-artisticas-comunitarias"  target="_blank">
+                  <img class="Alcaldia" src="img/EscudoPopayán.png">
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-linkedin"></i>
+                <a href="http://www.unicauca.edu.co/versionP/" target="_blank">
+                  <img class="unicauca" src="img/logos/logoUnicauca.png">
                 </a>
               </li>
             </ul>
@@ -1177,10 +1237,10 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
+                <a href="#"></a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
+                <a href="#">Alcalía de Popayán</a>
               </li>
             </ul>
           </div>
